# agent-zero

./: .chainlit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  APPLE_SILICON_GPU.md  ARCHITECTURE.md  CHANGES_CHECKLIST.md  CODE_ISSUES_FOUND.md  CODE_REVIEW.md  CODE_REVIEW_ADDENDUM.md  CODE_REVIEW_SUMMARY.md  CRITICAL_CODE_REVIEW.md  CROSS_PLATFORM_GUIDE.md  DASHBOARD_DESIGN.md  GPU_CROSS_PLATFORM.md  IMPLEMENTATION_SUMMARY.md  Makefile  OLLAMA_SETUP.md  PHASE_1_REVIEW.md  PHASE_1_STATUS_DASHBOARD.txt  PHASE_1_VALIDATION.md  PHASE_2_COMPLETION.md  PHASE_2_STEP_8_PLAN.md  PHASE_2_SUMMARY.md  PHASE_3_COMPLETION.md  PROJECT_PLAN.md  README.md  STEP_14_COMPLETION.md  STEP_15_COMPLETION.md  STEP_17_COMPLETION.md  STEP_18_COMPLETION.md  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  start.bat  start.sh  test_config.py
.devcontainer/: devcontainer.json  docker-compose.yml  init.sh  settings.json
.github/: copilot-instructions.md
.github/agents/: git-commiter.agent.md
config/: prometheus.yml
config/grafana/dashboards/: agent-zero.json
config/grafana/provisioning/dashboards/: agent-zero.yml
docker/: Dockerfile.app-agent  clickhouse-config.xml  start_services.sh
docs/: OBSERVABILITY_AUDIT.md  OBSERVABILITY_IMPLEMENTATION.md  OBSERVABILITY_TESTING.md  PROMPTFOO_GUIDE.md
src/: __init__.py  config.py  logging_config.py  startup.py  version.py
src/core/: agent.py  ingest.py  memory.py  retrieval.py
src/models/: agent.py  document.py  promptfoo.py  retrieval.py
src/observability/: __init__.py  langfuse_callback.py  metrics.py
src/security/: __init__.py  guard.py
src/services/: __init__.py  health_check.py  langfuse_client.py  meilisearch_client.py  ollama_client.py  promptfoo_client.py  qdrant_client.py
src/ui/: __init__.py  admin.py  admin_app.py  app.py  chat.py  dashboard.py  main.py  main_old_step23.py
src/ui/components/: __init__.py  chat.py  knowledge_base.py  navigation.py
src/ui/tools/: __init__.py  chat.py  knowledge_base.py  langfuse_dashboard.py  logs.py  promptfoo_dashboard.py  qdrant_dashboard.py  settings.py  system_health.py
tests/: conftest.py  test_config.py  test_startup.py
tests/core/: test_agent.py  test_ingest.py  test_memory.py  test_retrieval.py
tests/fixtures/: __init__.py
tests/integration/: test_chat_integration.py  test_dashboard_integration.py
tests/models/: test_promptfoo.py
tests/observability/: test_langfuse_callback.py
tests/security/: test_guard.py
tests/services/: test_health_check.py  test_langfuse_client.py  test_meilisearch_client.py  test_ollama_client.py  test_promptfoo_client.py  test_qdrant_client.py
tests/ui/: __init__.py  test_actions.py  test_admin_commands.py  test_app.py  test_chat.py  test_chat_handlers.py  test_dashboard.py  test_file_upload.py  test_navigation.py  test_phase6b_performance_checkpoint.py
tests/ui/tools/: __init__.py  test_system_health.py
(+1 files in other folders)
